<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/openNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newsOpen"
        tools:textAlignment="center" />

    <Button
        android:id="@+id/saveNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openNews"
        android:text="@string/newsSave"
        tools:textAlignment="center" />

    <Button
        android:id="@+id/newsCancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveNews"
        android:text="@string/Cancel"
        tools:textAlignment="center" />


</RelativeLayout>