<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlightStatusArrivalsInformation"
    android:orientation="vertical">

    <include android:id="@+id/flightStatusToolbarArrDep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/flight_status_toolbar_menu" />

    <TextView
        android:id="@+id/flightStatusAirportName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flight_airport"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flight_airport_code" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flight_arrivals" />

    <ListView
        android:id="@+id/flightStatusAirportArrivals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </ListView>

</LinearLayout>